# rsCalcManager

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml
src/: commands.rs  display.rs  error.rs  lib.rs  types.rs
src/engine/: calc_engine.rs  calc_input.rs  history.rs  mod.rs  resource_provider.rs
src/manager/: calculator_history.rs  calculator_manager.rs  expression_command.rs  mod.rs
src/ratpack/: arithmetic.rs  basex.rs  constants.rs  conv.rs  exp.rs  fact.rs  itrans.rs  logic.rs  mod.rs  num.rs  number.rs  rational.rs  support.rs  trans.rs
src/unit_converter/: converter.rs  mod.rs  types.rs
test/port_harness/: CMakeLists.txt  harnessplan.md  ratpack_harness.cpp
test/project_harness/: harnessplan.md
test/reference_output/: arithmetic.jsonl  conversion.jsonl  exp_log.jsonl  factorial.jsonl  itrig.jsonl  logic.jsonl  support.jsonl  trig.jsonl
test/test_cases/: arithmetic.json  conversion.json  exp_log.json  factorial.json  itrig.json  logic.json  support.json  testplan.md  trig.json
tests/: ratpack_integration.rs
